--- a/app/src/main/res/layout/activity_tag.xml
+++ b/app/src/main/res/layout/activity_tag.xml
@@ -37,9 +37,11 @@
             android:background="@drawable/custom_input"
             android:drawableLeft="@drawable/search"
             android:hint="  Search"
-            android:padding="10dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
             android:textColor="@color/white"
-            android:textColorHint="#CCFFFFFF">
+            android:textColorHint="#CCFFFFFF"
+            android:paddingLeft="20dp">
 
         </EditText>
 
@@ -64,7 +66,7 @@
         android:layout_below="@+id/textView"/>
 
     <Button
-        android:id="@+id/btnAdd"
+        android:id="@+id/btnAddGrocery"
         android:layout_width="55dp"
         android:layout_height="60dp"
         android:background="@drawable/button_round"
