--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -37,9 +37,11 @@
             android:background="@drawable/custom_input"
             android:drawableLeft="@drawable/search"
             android:hint="  Search"
-            android:padding="10dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
             android:textColor="@color/white"
-            android:textColorHint="#CCFFFFFF">
+            android:textColorHint="#CCFFFFFF"
+            android:paddingLeft="20dp">
 
         </EditText>
 
@@ -63,7 +65,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"/>
         <Button
-            android:id="@+id/btnAdd"
+            android:id="@+id/btnAddGrocery"
             android:layout_width="113dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="26dp"
