--- a/app/src/main/res/drawable/button_round.xml
+++ b/app/src/main/res/drawable/button_round.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="oval">
-            <solid android:color="@color/round_gradient_button_start_color"/>
+            <solid android:color="@color/purple_500"/>
             <size android:width="2dp" android:height="2dp"/>
         </shape>
     </item>
