--- a/app/src/main/res/layout/activity_item_update.xml
+++ b/app/src/main/res/layout/activity_item_update.xml
@@ -36,7 +36,8 @@
         android:layout_marginTop="30dp"
         android:text="Update item"
         android:textColor="@color/title"
-        android:layout_marginLeft="20dp"/>
+        android:layout_marginLeft="20dp"
+        android:textSize="20dp"/>
 
     <EditText
         android:id="@+id/etItemName"
