--- a/app/src/main/res/layout/activity_update_task.xml
+++ b/app/src/main/res/layout/activity_update_task.xml
@@ -1,34 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.task.AddTaskActivity"
-    >
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/gradient_background"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:text="@string/app_name"
+            android:textColor="@color/white"
+            android:textSize="26dp" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tvTitleUpdateTask"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="30dp"
         android:text="Update task"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="20dp"/>
 
     <EditText
         android:id="@+id/etTaskNameUpdate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="28dp"
         android:ems="10"
         android:hint="Task name"
-        android:inputType="textPersonName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvTitleUpdateTask" />
+        android:inputType="textPersonName" />
 
     <TextView
         android:id="@+id/tvChooseDateUpdate"
@@ -38,46 +55,43 @@
         android:drawableLeft="@drawable/calendar"
         android:text="  Choose date"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.098"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnChooseTagUpdate" />
+        android:layout_marginLeft="20dp"/>
 
-    <Button
-        android:id="@+id/btnChooseTagUpdate"
-        android:layout_width="100dp"
-        android:layout_height="37dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="24dp"
-        android:text="Choose tag"
-        android:textAllCaps="false"
-        android:textSize="10sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etTaskNameUpdate" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp">
+        <Button
+            android:id="@+id/btnChooseTagUpdate"
+            android:layout_width="100dp"
+            android:layout_height="37dp"
+            android:layout_marginStart="20dp"
+            android:text="Choose tag"
+            android:textAllCaps="false"
+            android:textSize="10sp"
+            android:layout_alignParentLeft="true"/>
 
-    <HorizontalScrollView
-        android:layout_width="269dp"
-        android:layout_height="33dp"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="24dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/btnChooseTagUpdate"
-        app:layout_constraintTop_toBottomOf="@+id/etTaskNameUpdate">
+        <HorizontalScrollView
+            android:layout_width="269dp"
+            android:layout_height="33dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="20dp">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center">
-
-            <TextView
-                android:id="@+id/tvSelectedTagsUpdate"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:textSize="18sp" />
-        </LinearLayout>
-    </HorizontalScrollView>
+                android:orientation="vertical"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/tvSelectedTagsUpdate"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textSize="18sp" />
+            </LinearLayout>
+        </HorizontalScrollView>
+    </RelativeLayout>
+
 
     <CheckBox
         android:id="@+id/chkImportantUpdate"
@@ -85,10 +99,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="Important"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.088"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvChooseDateUpdate" />
+        android:layout_marginLeft="20dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -104,9 +115,6 @@
             android:text="Update"
             android:textAllCaps="false"
             android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.088"
-            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="20dp"/>
 
         <Button
@@ -117,13 +125,10 @@
             android:text="Delete"
             android:textAllCaps="false"
             android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.088"
-            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="20dp"
             android:backgroundTint="@color/shadow"/>
     </LinearLayout>
 
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
