--- a/app/src/main/res/layout/activity_item_update.xml
+++ b/app/src/main/res/layout/activity_item_update.xml
@@ -13,8 +13,7 @@
         android:layout_alignParentTop="true"
         android:background="@drawable/gradient_background"
         android:gravity="center"
-        android:orientation="vertical"
-        tools:context=".ui.home.HomeFragment">
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
