add validation on updating tag

--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -65,17 +65,17 @@
         android:layout_marginTop="24dp">
         <Button
             android:id="@+id/btnChooseTag"
-            android:layout_width="100dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="Choose tag"
             android:textAllCaps="false"
             android:layout_marginStart="20dp"
-            android:textSize="10sp"
+            android:textSize="16sp"
             android:layout_alignParentLeft="true"/>
 
         <HorizontalScrollView
-            android:layout_width="269dp"
-            android:layout_height="33dp"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
             android:layout_alignParentRight="true">
 
@@ -83,13 +83,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:gravity="center">
+                android:gravity="center_vertical">
 
                 <TextView
                     android:id="@+id/tvSelectedTags"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    android:gravity="center_vertical"
+                    android:paddingBottom="10dp"
+                    android:paddingTop="10dp"/>
             </LinearLayout>
         </HorizontalScrollView>
     </RelativeLayout>
@@ -101,16 +104,21 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="Important"
-        android:layout_marginLeft="20dp" />
+        android:layout_marginLeft="20dp"
+        android:textSize="16dp"/>
 
     <Button
         android:id="@+id/btnAddTask"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+
         android:text="Add"
         android:textAllCaps="false"
-        android:textSize="12sp"
-        android:layout_marginLeft="20dp" />
+        android:textSize="18sp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"/>
 
 </LinearLayout>
