add high keyboard after update item and edit grocery. add validation on editing grocery

--- a/app/src/main/res/layout/activity_edit_grocery.xml
+++ b/app/src/main/res/layout/activity_edit_grocery.xml
@@ -54,7 +54,7 @@
 
     <Button
         android:id="@+id/btnSaveGrocery"
-        android:text="Edit grocery"
+        android:text="Save"
         android:layout_centerHorizontal="true"
         android:textAllCaps="false"
         android:layout_width="match_parent"
